<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_get_started"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abvrtridentroom.roomconfiguration.ui.GetStartedActivity"
    android:background="@mipmap/back_getstarted">

    <RelativeLayout
        android:layout_width="10dp"
        android:layout_height="1dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout_center">

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/logo_welcome"
        android:layout_above="@+id/relativeLayout_center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:id="@+id/imageView_logo" />

    <TextView
        android:text="@string/require_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:id="@+id/textView_version"
        android:textColor="@color/green"
        android:textStyle="italic"
        android:textSize="12sp" />

    <Button
        android:text="@string/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="19dp"
        android:id="@+id/button_start"
        android:layout_above="@+id/textView_version"
        android:layout_toLeftOf="@+id/relativeLayout_center"
        android:layout_toStartOf="@+id/relativeLayout_center"
        android:background="@drawable/round_start"
        android:textAllCaps="false"
        android:textColor="@color/yellow"
        android:minHeight="45dp"
        android:minWidth="155dp"
        android:textSize="12sp" />

    <Button
        android:text="@string/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_update"
        android:background="@drawable/round_update"
        android:textAllCaps="false"
        android:textColor="@color/yellow"
        android:minHeight="45dp"
        android:minWidth="155dp"
        android:textSize="12sp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_alignTop="@+id/button_start"
        android:layout_toRightOf="@+id/relativeLayout_center"
        android:layout_toEndOf="@+id/relativeLayout_center" />
</RelativeLayout>
